<resources>
    <string name="app_name">教育云Demo</string>
    <string name="app_demo_name">EduSoho教育云demo</string>
    <string name="action_settings">Settings</string>
    <string name="video">视频</string>
    <string name="audio">音频</string>
    <string name="document">文档</string>
    <string name="ppt">ppt</string>
    <string name="test_demo">测试示例</string>
    <string name="download_demo">下载</string>
    <string name="ppt_btn_prev">上一页</string>
    <string name="ppt_btn_next">下一页</string>
    <string name="btn_screen">全屏</string>

    <string name="sd">标清</string>
    <string name="hd">高清</string>
    <string name="shd">超清</string>
    <string name="sample_list_group_title">测试视频列表</string>
    <string name="ppt_animation">PPT动画</string>
    <string name="app_course_about">EduSoho系统介绍课程</string>
    <string name="upload_resource">上传课程资源</string>
    <string name="manage_recource">管理资源库</string>
    <string name="manage_recource_tips_content">点击名称播放，左滑可以编辑和删除</string>
    <string name="downloaded_resource">已下载资源</string>
    <string name="select_all">全选</string>
    <string name="present_resource">EduSoho系统介绍课程</string>
    <string name="course_no">课时  %1s :</string>
    <string name="write_external_storage">请允许「读写」权限!</string>
    <string name="resource_upload">上传</string>
    <string name="upload_succes_tips">上传成功，请下拉到最下面查看新创建的课时</string>
    <string name="upload_cancel_tips">上传取消</string>
    <string name="delete_succes_tips">删除成功</string>
    <string name="dialog_edit_title">编辑</string>
    <string name="edit_sucess_tips">编辑成功</string>
    <string name="not_empty_tips">请输入资源名称</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="pause_all">全部暂停</string>
    <string name="clear_all">全部清除</string>
    <string name="dialog_title_tips">提示</string>
    <string name="dialog_confirm_delete_tips">你真的要删除吗！</string>
</resources>
