<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onVideoClick"
            android:text="@string/video" />

        <Button
            android:id="@+id/btn_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAudioClick"
            android:text="@string/audio" />

        <Button
            android:id="@+id/btn_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDocumentClick"
            android:text="@string/document" />

        <Button
            android:id="@+id/btn_ppt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPPTClick"
            android:text="@string/ppt" />

        <Button
            android:id="@+id/btn_ppt_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPPTAnimationClick"
            android:text="@string/ppt_animation" />

        <Button
            android:id="@+id/btn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onTestDemoClick"
            android:text="@string/test_demo" />

        <Button
            android:id="@+id/btn_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onTestDownloadClick"
            android:text="@string/download_demo" />

    </LinearLayout>

</LinearLayout>